--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <div class="slides">
 
 <section>
-  <section>Djay for <img src="img/mathworks_logo.jpg" style="vertical-align: middle;">
-  <p>
+  <section> <h3> Djay for <img src="img/mathworks_logo.jpg" style="vertical-align: middle;"> </h3>
+  <p> 18 November 2016
   </section>
   <section data-markdown>
     ##For interview team members
@@ -80,18 +80,27 @@
 <section>
   <section>Notable Projects</section>
   <section>Microscopy Automation</section>
-  <section>Digital SlideAtlas</section>
+
   <section>
-    <section data-markdown>
-      ##Aladdin GENIE
-    </section>
-    <section>
-      <p> <img src="img/semantic_exploration.svg">
-    </section>
+    <h3> Digital SlideAtlas </h3>
+    <img src="img/multiuser.svg" class="stretch">
   </section>
+
+  <section data-markdown>
+    ###Aladdin GENIE
+    <img src="img/semantic_exploration.svg" class="stretch">
+  </section>
+
   <section>
-  <section>Visual Recognition of Objects</section>
-  <section>Digital Surgery Simulation</section>
+    <h3> Visual Recognition of Objects in image </h3>
+    <img src="img/phynness.png" class="stretch">
+  </section>
+
+  <section>
+    <h3> Digital Surgery Simulation</h3>
+    <img src="img/phynness.png" class="stretch">
+  </section>
+
   <section data-markdown>
   ###Outside work hours
   - Tinkering with raspbery pi
