--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
   </section>
 </section>
 
-<section>Digital Slide Atlas</section>
+<section>
+  <h3> Digital Slide Atlas </h3>
   <aside class="notes">
     I'm your Notes :)
   </aside>
@@ -132,7 +133,7 @@
   - 3D stack creation and viewing
 </section>
 
-<section data-markdown>Logistics</section>
+<section data-markdown> ## Logistics</section>
 
 <section>
     <section data-markdown>
@@ -167,11 +168,10 @@
 
 <section>
   <section>Deployment and workflow</section>
-  <section data-markdown>Developer setup
-    <p>
-      - Docker container with all dependencies
-      - Dummy database or map ports to production database
-    <p>
+  <section data-markdown>
+    ###Developer setup
+    - Docker container with all dependencies
+    - Dummy database or map ports to production database
   </section>
   <section data-markdown>
     ### Production setup
@@ -193,40 +193,38 @@
 
 <section>
   <section data-markdown>
-    ## Impact
+  ## Impact
   </section>
 
   <section data-markdown>
-      ### Education
-      - Targeting medical schools, residency training, continuing education
-      - Features for selective hiding of annotations, quiz mode, and full-screen presentation creation
-      - Remote and collaborative viewing
-    </section>
+    ### Education
+    - Targeting medical schools, residency training, continuing education
+    - Features for selective hiding of annotations, quiz mode, and full-screen presentation creation
+    - Remote and collaborative viewing
+  </section>
 
-    <section data-markdown>
-      ### Research
-      - Supporting image processing algorithms, and very large datasets
-      - Consulting
-      - Automatic batch upload of images
-  </script> </section>
+  <section data-markdown>
+    ### Research
+    - Supporting image processing algorithms, and very large datasets
+    - Consulting
+    - Automatic batch upload of images
+  </section>
 </section>
 
 <section>
   <section data-markdown>
       ## Technical features
   </section>
-  <section data-markdown> <script type="text/template">
+  <section data-markdown>
     ### Blocking vs non-blocking io
     - Serve multiple users simultaneously
     - Monkey patching python standard library for
   </section>
   <section data-markdown>
       ### Memory mapped files
-
       - Map files in virtual memory and access data directly instead of file io system calls
       - Efficient access for large files
       - Easy to share large file resources across processes
-
   </section>
   <section data-markdown>
       ### LRU Cache
@@ -304,7 +302,7 @@
   - Diverse skillsets
   - End-to-end agile development
   - Creative prototypes
-</section>
+ </section>
 
 <section> <h3> Questions, Comments, Advisements ? </h3>
   <img src="img/dilbert.jpg" class="stretch">
