--- a/index.html
+++ b/index.html
@@ -41,6 +41,19 @@
 </section>
 
 <section>
+  <section data-markdown>###Outline
+  - About us
+  - My background
+    - Education
+    - Notable projects
+    - Digital SlideAtlas
+
+  - Digital SlideAtlas in detail
+    - Features
+    - Challenges
+    - Image streaming
+    - Server
+  </section>
   <section data-markdown>
   ###About this Presentation
   - Built with [reveal.js](http://lab.hakim.se/reveal-js/#/)
@@ -53,18 +66,26 @@
   - Good for interactive demos over web (no alt+tab)
   - Easy support over all smart devices
   </section>
-  <section data-markdown>###Outline
-  - About us
-  - My background
-    - Education
-    - Notable projects
-    - Digital SlideAtlas
-    - Surgery Simulation
-  - Digital SlideAtlas in detail
-  </section>
 </section>
 
 <section>
+  <section data-markdown>
+  ###About this Presentation
+  - Built with [reveal.js](http://lab.hakim.se/reveal-js/#/)
+  - Hosted at [dhandeo.github.io](https://dhandeo.github.io/djay_for_mathworks/#/)
+  </section>
+  <section data-markdown>
+  ###Why web
+  - Always wanted a hands on experience
+  - Like the nested slide layout
+  - Good for interactive demos over web (no alt+tab)
+  - Easy support over all smart devices
+  </section>
+  <section data-markdown>
+    ###Djay Deo
+    <img src="img/wordcloud_dark.svg" class="stretch">
+  </section>
+
   <section>Education</section>
   <section>Master of Science (faculty of engineering)</section>
   <section>Doctor of Philosophy (Mechanical engineering)</section>
