--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
       <div class="slides">
 
 <section>
-  <section> <h3> Djay for <img src="img/mathworks_logo.jpg" style="vertical-align: middle;"> </h3>
-  <p> 18 November 2016
+  <section>
+    <h3> Djay for <img src="img/mathworks_logo.jpg" style="vertical-align: middle;"> </h3>
+    <p> 18 November 2016
   </section>
   <section data-markdown>
     ##For interview team members
@@ -47,18 +48,19 @@
     - Education
     - Notable projects
     - Digital SlideAtlas
-
   - Digital SlideAtlas in detail
     - Features
     - Challenges
     - Image streaming
     - Server
   </section>
+
   <section data-markdown>
   ###About this Presentation
   - Built with [reveal.js](http://lab.hakim.se/reveal-js/#/)
   - Hosted at [dhandeo.github.io](https://dhandeo.github.io/djay_for_mathworks/#/)
   </section>
+
   <section data-markdown>
   ###Why web
   - Always wanted a hands on experience
@@ -69,30 +71,18 @@
 </section>
 
 <section>
-  <section data-markdown>
-  ###About this Presentation
-  - Built with [reveal.js](http://lab.hakim.se/reveal-js/#/)
-  - Hosted at [dhandeo.github.io](https://dhandeo.github.io/djay_for_mathworks/#/)
-  </section>
-  <section data-markdown>
-  ###Why web
-  - Always wanted a hands on experience
-  - Like the nested slide layout
-  - Good for interactive demos over web (no alt+tab)
-  - Easy support over all smart devices
-  </section>
-  <section data-markdown>
-    ###Djay Deo
-    <img src="img/wordcloud_dark.svg" class="stretch">
-  </section>
 
-  <section>Education</section>
+  <img src="img/wordcloud_dark.svg" class="stretch">
+</section>
+
+<section>
+  <section><h3> Education </h3></section>
   <section>Master of Science (faculty of engineering)</section>
   <section>Doctor of Philosophy (Mechanical engineering)</section>
 </section>
 
 <section>
-  <section>Skills</section>
+  <section> <h3>Skills</h3></section>
   <section>Programming</section>
   <section>Math</section>
   <section>Misc</section>
