--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" >
-
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    
     <title>Djay for Mathworks</title>
     <style>
     .slide-number {
@@ -24,7 +26,7 @@
     <p> 18 November 2016
   </section>
   <section data-markdown>
-    ##For interview team members
+    ###रFor interview team members
     - David Boissy (Control Design Automation)
     - Mike Carvill (Human Resources)
     - Kunal Kadakia (Control Design Automation)
@@ -33,7 +35,8 @@
     - TODO: Add last minute additions
   </section>
   <section data-markdown>
-    ##About me
+    ###About me
+    - Dhanannjay Deo (धनंजय देव)
     - mailto:dhandeo@gmail.com
     - https://github.com/dhandeo
     - https://www.linkedin.com/in/dhandeo
