--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" >
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    
+
     <title>Djay for Mathworks</title>
     <style>
     .slide-number {
@@ -26,7 +26,7 @@
     <p> 18 November 2016
   </section>
   <section data-markdown>
-    ###रFor interview team members
+    ###For interview team members
     - David Boissy (Control Design Automation)
     - Mike Carvill (Human Resources)
     - Kunal Kadakia (Control Design Automation)
