--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
   <section>
     <h4> Aladdin GENIE - General Engine for Indexing Events </h4>
-    <img src="img/genie.png" class="stretch">
+    <img src="img/genie.jpg" class="stretch">
   </section>
 
   <section>
@@ -129,7 +129,7 @@
 
   <section>
     <h3> Digital Surgery Simulation</h3>
-    <img src="img/phynness.png" class="stretch">
+    <img src="img/phynness.jpg" class="stretch">
   </section>
 
   <section>
@@ -190,7 +190,7 @@
 
     <section>
       <h3>Image pyramid</h3>
-      <img src="img/pyramid.png" class="stretch">
+      <img src="img/pyramid.jpg" class="stretch">
     </section>
 
     <section>
@@ -329,7 +329,7 @@
   </section>
 
   <section> <h3> Analysis color thresholding </h3>
-    <img src="img/histograms.png" class="stretch">
+    <img src="img/histograms.jpg" class="stretch">
   </section>
 
   <section>Machine learning plugin
