--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
   <section>
     <h4> Aladdin GENIE (live) </h4>
-    <iframe src="http://genie.kitware.com/help" class="stretch">
+    <iframe src="https://genie-new.kitware.com/help" class="stretch">
      Sorry your browser does not support inline frames.
     </iframe>
   </section>
@@ -149,7 +149,7 @@
 
 <section>
   <h3> Digital Slide Atlas </h3>
-  <iframe src="http://slide-atlas.org" class="stretch">
+  <iframe src="https://slide-atlas.org" class="stretch">
    Sorry your browser does not support inline frames.
   </iframe>
 </section>
