--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
   <section>
     <h4> Aladdin GENIE (live) </h4>
-    <iframe src="https://genie-new.kitware.com/help" class="stretch">
+    <iframe src="http://genie-new.kitware.com/help" class="stretch">
      Sorry your browser does not support inline frames.
     </iframe>
   </section>
